# shipit

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  package.nix  result  sonar-project.properties
.github/workflows/: build.yml  docker.yml
src/: commit.rs  main.rs  repository.rs
src/providers/: commit.rs  gitea.rs  gitlab.rs  mod.rs
src/templaters/: json.rs  mod.rs  yaml.rs
src/templaters/json/: mod.rs
