[package]
name = "shipit"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1"
bytes = { version = "1", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
json-patch = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.21"
mockito = "1.1"