[package]
name = "shipit"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1"
bytes = { version = "1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
base64 = "0.21"
clap = { version = "4", features = ["cargo", "env"] }
percent-encoding = "2.3.0"
log = "0.4.19"
env_logger = "0.10.0"

[dev-dependencies]
mockito = "1.1"
